set fixed length between text and input
prevents text and input from having too much space inbetween when browser is bigger than normal

--- a/static/styles.css
+++ b/static/styles.css
@@ -24,7 +24,7 @@ nav ul li a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 40%;
+    width: 300px;
     margin: 10px auto;
 
 }
